--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ h2 {
 
 .coluna-1{
   width: 430px;
-  height: 265px;
+  height: 300px;
   padding-top: 5px;
   padding-left: 20px;
   padding-right: 20px;
@@ -160,11 +160,11 @@ h2 {
   font-family: EB Garamond;
   color: #867f7f;
   font-size: 16px;
-  padding-bottom: 25px;
+  padding-bottom: 15px;
 }
 
 .btn-contato{
-  padding: 12px 20px;
+  padding: 20px 20px;
   border-radius: 8px;
   border: none;
   background-color: #92C58A;
@@ -180,6 +180,7 @@ h2 {
 .portfolio{
   text-align: center;
   padding-top: 20px;
+  padding-bottom: 30px;
 }
 
 .portfolio h2{
@@ -187,6 +188,27 @@ h2 {
   font-size: 20px;
   font-weight: 100px;
 }
+
+.depoimentos{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 20px;
+  gap: 10px;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.depoimento1{
+  padding: 5px;
+}
+
+
+
+
+
+
 
 
 
