--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ h2 {
   width: 300px;
   color: #686060;
   font-size: 18px;
-  padding-bottom: 42px;
+  padding-bottom: 66px;
 }
 
 .servico3{
@@ -297,6 +297,22 @@ h2 {
   padding-bottom: 42px;
 }
 
+.contato{
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  border-top: 1px solid #D3D3D3;
+  margin-top: 70px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contato h2{
+  margin-bottom: 0px;
+  font-size: 20px;
+  font-weight: 100px;
+}
 
 
 
