--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ h2 {
 
 .coluna-1{
   width: 430px;
-  height: 300px;
+  height: 310px;
   padding-top: 5px;
   padding-left: 20px;
   padding-right: 20px;
@@ -301,7 +301,6 @@ h2 {
   text-align: center;
   padding-top: 20px;
   padding-bottom: 30px;
-  border-top: 1px solid #D3D3D3;
   margin-top: 70px;
   max-width: 1200px;
   margin-left: auto;
@@ -314,8 +313,49 @@ h2 {
   font-weight: 100px;
 }
 
+.contatos-cont{
+  text-align: center;
+  border-bottom: 1px solid #D3D3D3;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
 
+.contatos-cont h3{
+  color: #686060;
+  font-size: 18px;
+  padding-bottom: 20px;
+  font-family: EG Garamond;
+  font-style: bold;
+  font-weight: 500px;
+}
 
+.footer{
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  margin-top: 10px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer p{
+  color: #686060;
+  font-size: 16px;
+  font-family: EG Garamond;
+  font-style: bold;
+  font-weight: 500px;
+}
+
+.img-wpp{
+  max-width: 16px;
+  max-height: 16px;
+  padding-right: 5px;
+}
 
 
 
