--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,9 @@ h2 {
 }
 
 @media (max-width: 800px) {
+  li{
+    font-size: 10px;
+  }
   .header{
     flex-direction: column;
     align-items: center;
